examples/compiler_errors/row_effects/incomplete_handler_arms_e402.flx
// expect: compile_error
// expect-error: E402

effect Console {
    print: String -> ()
    read: () -> String
}

fn main() with Console {
    perform Console.print("hello") handle Console {
        print(resume, _msg) -> resume(())
    }
}
